# trading_engine

./: .gitignore  CMakeLists.txt  build.sh  config.json  config.toml  install_dependencies.sh  install_requirements.sh  main.cc
common/: branchless_binary_search.hpp  macros.h  macros.hpp  thread_pool.hpp  thread_utils.hpp  types.h
common/queue/: spmc_queue.hpp
core/common/: CircularBuffer.hpp  CoreSet.hpp  allocators.hpp  concepts.hpp  json_parser.hpp  macros.hpp  memory.hpp  spsc_queue.hpp  thread_utils.hpp  types.hpp
core/common/queue/: spmc_queue.hpp
core/common/queues/: CircularBuffer.hpp  MessageQueues.hpp  SPSCQueue.hpp  concepts.hpp  spsc_queue.hpp
core/engine/: order.hpp  order_book.cpp  order_book.hpp
core/itch/: message.hpp  moldudp64.hpp  msg_handler.cpp  msg_handler.hpp  msg_handlers.cpp  msg_handlers.hpp  msg_parser.cpp  msg_parser.hpp  msg_types.hpp
core/logger/: Logger.hpp
core/network/: af_packet.cpp  af_xdp.cpp  error.hpp  exchange_client.cpp  packet_socket.cpp  run.sh  server.hpp  socket.hpp  socket_config.hpp  socket_utils.hpp  xdp_filter_mcast_udp.c  xdp_socket.cpp  xdp_socket.hpp  xdp_utils.hpp
core/network/fast/: main.cpp
core/network/socket/: RawSocket.cpp  RawSocket.hpp  feed_handler.cpp  feed_handler.hpp  raw_socket.cpp  raw_socket.hpp  socket_utils.hpp  tpacket.hpp
core/network/xdp/: load_and_attach_xdp_program.sh  xdp_loader.cpp  xdp_loader.hpp  xdp_socket.cpp  xdp_socket.hpp  xdp_utils.hpp
core/orderbook/: Order.hpp  OrderBook.cpp  OrderBook.hpp  PriceLevel.hpp  orderbook_manager.cpp  orderbook_manager.hpp  orderbook_types.hpp  types.hpp
core/orderbook/L2/: orderbook.cpp  orderbook.hpp
core/orderbook/L3/: OrderBook.hpp  orderbook.cpp
core/parser/: BinaryFILE.hpp  deserialize.hpp  msg_parser.cpp  msg_parser.hpp  msg_types.hpp
core/stats/: OrderbookStats.cpp  OrderbookStats.hpp
core/sys/: memory.hpp
docs/: nic_filter.txt
docs/notes/: building_blocks.txt  components_of_trading_systems.txt  exchange_dynamics.txt  fundamentals.txt  macros.txt  matching_engine.txt  memory_pool.txt  misc.txt  networking.txt  order_book.txt  order_management_system.txt  shared_memory.txt  strategy.txt  talks.txt  threads.txt  trading_topology.txt  what_is_hft.txt
docs/notes/instrument_store/: common_ds.cpp  inst_store.txt  stable_vector.hpp
engine/: order_book.cc  order_book.h  order_book_map.cc  order_book_map.h  order_book_vector.cc  order_book_vector.h
extra/scripts/: cleanup_multicast.sh
network/: Socket.cpp  Socket.hpp  TCPSocket.hpp  server.hpp  socket.cc  socket.cpp  socket.h  socket.hpp  socket_config.hpp  socket_utils.hpp  tcp_socket.cc  tcp_socket.h  utils.hpp
tests/: run_tests.sh  test_orderbook.cpp
trading_engine/docs/: subscribe_mcast.txt
trading_engine/src/: a.out  main.cpp
trading_engine/test/: CMakeLists.txt
trading_engine/test/orderbook/: orderbook_test.cpp
(+69 files in other folders)
